# TinyMMO_login_server

./: .env-example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0e8d4c5fb9a3_create_users_table.py
docs/uml/: classes_login_server.mmd
login_server/: __main__.py  app.py  bootstrap.py  config.py
login_server/api/: README.md  controllers.py  dependencies.py  routes.py  schemas.py  ws.py
login_server/common/: README.md  exceptions.py  logging.py
login_server/crypto/: README.md  __init__.py  challenge.py  crypto_utils.py
login_server/domain/: README.md  user.py
login_server/domain/adapters/: __init__.py  redis_adapter.py  sql_adapter.py
login_server/domain/repositories/: __init__.py  challenge_storage.py  user_repository.py
login_server/infra/: README.md  __init__.py  unit_of_work.py
login_server/infra/adapters/: __init__.py  postgresql_adapter.py  redis_adapter.py
login_server/infra/repositories/: __init__.py  challenge_storage.py  redis_challenge_storage.py  user_sql_repository.py
login_server/infra/security/: __init__.py  challenge_encryptor.py  hasher.py
login_server/services/: README.md  user_service.py
services/login_server/: CMakeLists.txt
services/login_server/tests/: test_login.cpp  test_registration.cpp
tests/: conftest.py
tests/api/: conftest.py  test_auth_api.py  test_controllers.py  test_ws_login.py
tests/crypto/: test_challenge.py  test_crypto_utils.py
tests/infra/: test_unit_of_work.py
tests/infra/adapters/: test_posgresql_adapter.py  test_redis_adapter.py
tests/infra/repositories/: test_challenge_storage.py  test_user_sql_repository.py
tests/services/: test_authenticate_user_service.py  test_generate_challenge_service.py  test_register_user_service.py  test_user_service.py
